// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home page can delete typed text with backspace 1`] = `
<DocumentFragment>
  .emotion-17 {
  height: 100vh;
  min-width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-14 {
  max-width: 50%;
  min-width: 640px;
}

.emotion-2 {
  --text-opacity: 1;
  font-size: 2.25rem;
  color: #1c64f2;
  color: rgba(28,100,242,var(--text-opacity));
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-1 {
  font-size: 0.75rem;
}

.emotion-0 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-10 {
  font-size: 1.25rem;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-8 {
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  overflow-wrap: break-word;
}

.emotion-7 {
  position: relative;
  overflow-wrap: normal;
  word-break: normal;
}

.emotion-3 {
  --bg-opacity: 1;
  position: absolute;
  height: 1.5rem;
  background-color: #3f83f8;
  background-color: rgba(63,131,248,var(--bg-opacity));
  -webkit-transition: all 0.1s ease-out;
  transition: all 0.1s ease-out;
  width: 2px;
  margin-left: -1px;
  margin-right: -1px;
  left: 1px;
  top: 0px;
}

.emotion-13 {
  height: 0;
  width: 0;
}

.emotion-16 {
  position: fixed;
  bottom: 0;
  padding-bottom: 2rem;
  text-align: center;
}

.emotion-6 {
  --text-opacity: 1;
  color: #d2d6dc;
  color: rgba(210,214,220,var(--text-opacity));
}

.emotion-4 {
  --text-opacity: 1;
  color: #057a55;
  color: rgba(5,122,85,var(--text-opacity));
}

.emotion-11 {
  font-size: 1rem;
}

<div
    class="emotion-17"
  >
    <main
      class="emotion-14"
    >
      <h1
        class="emotion-2"
      >
        Typeland
        <span
          class="emotion-1"
        >
           [Mode : 
          <button
            class="emotion-0"
          >
            typealong
          </button>
          ]
        </span>
      </h1>
      <div
        class="emotion-10"
        data-testid="text"
      >
        <span
          class="emotion-8"
          data-testid="user"
        >
          <span
            class="emotion-7"
          >
            <span
              class="emotion-3"
              data-testid="caret"
            />
            <span
              class="correct emotion-4"
              data-testid="correct"
            >
              t
            </span>
            <span
              class="correct emotion-4"
              data-testid="correct"
            >
              h
            </span>
            <span
              class="pending emotion-6"
              data-testid="pending"
            >
              e
            </span>
          </span>
          <span>
             
          </span>
        </span>
        <span
          class="emotion-8"
          data-testid="template"
        >
          quick brown fox jumps over the lazy dog
        </span>
      </div>
      <div
        class="emotion-11"
      >
        0 wpm
      </div>
      <div
        class="emotion-11"
      >
        Stats (correct/wrong/total) : 0/0/0
      </div>
      <input
        class="emotion-13"
        data-testid="typingInput"
        id="typingInput"
        tabindex="0"
        type="text"
      />
    </main>
    <div
      class="emotion-16"
    >
      <a
        class="emotion-1"
        href="https://github.com/narze/typeland"
        rel="noreferrer"
        target="_blank"
      >
        GitHub
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Home page highlights text which is typed 1`] = `
<DocumentFragment>
  .emotion-17 {
  height: 100vh;
  min-width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-14 {
  max-width: 50%;
  min-width: 640px;
}

.emotion-2 {
  --text-opacity: 1;
  font-size: 2.25rem;
  color: #1c64f2;
  color: rgba(28,100,242,var(--text-opacity));
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-1 {
  font-size: 0.75rem;
}

.emotion-0 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-10 {
  font-size: 1.25rem;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-8 {
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  overflow-wrap: break-word;
}

.emotion-7 {
  position: relative;
  overflow-wrap: normal;
  word-break: normal;
}

.emotion-3 {
  --bg-opacity: 1;
  position: absolute;
  height: 1.5rem;
  background-color: #3f83f8;
  background-color: rgba(63,131,248,var(--bg-opacity));
  -webkit-transition: all 0.1s ease-out;
  transition: all 0.1s ease-out;
  width: 2px;
  margin-left: -1px;
  margin-right: -1px;
  left: 1px;
  top: 0px;
}

.emotion-13 {
  height: 0;
  width: 0;
}

.emotion-16 {
  position: fixed;
  bottom: 0;
  padding-bottom: 2rem;
  text-align: center;
}

.emotion-4 {
  --text-opacity: 1;
  color: #057a55;
  color: rgba(5,122,85,var(--text-opacity));
}

.emotion-11 {
  font-size: 1rem;
}

.emotion-6 {
  --text-opacity: 1;
  color: #f98080;
  color: rgba(249,128,128,var(--text-opacity));
}

<div
    class="emotion-17"
  >
    <main
      class="emotion-14"
    >
      <h1
        class="emotion-2"
      >
        Typeland
        <span
          class="emotion-1"
        >
           [Mode : 
          <button
            class="emotion-0"
          >
            typealong
          </button>
          ]
        </span>
      </h1>
      <div
        class="emotion-10"
        data-testid="text"
      >
        <span
          class="emotion-8"
          data-testid="user"
        >
          <span
            class="emotion-7"
          >
            <span
              class="emotion-3"
              data-testid="caret"
            />
            <span
              class="correct emotion-4"
              data-testid="correct"
            >
              t
            </span>
            <span
              class="correct emotion-4"
              data-testid="correct"
            >
              h
            </span>
            <span
              class="wrong emotion-6"
              data-testid="wrong"
            >
              e
            </span>
          </span>
          <span>
             
          </span>
        </span>
        <span
          class="emotion-8"
          data-testid="template"
        >
          quick brown fox jumps over the lazy dog
        </span>
      </div>
      <div
        class="emotion-11"
      >
        0 wpm
      </div>
      <div
        class="emotion-11"
      >
        Stats (correct/wrong/total) : 0/0/0
      </div>
      <input
        class="emotion-13"
        data-testid="typingInput"
        id="typingInput"
        tabindex="0"
        type="text"
      />
    </main>
    <div
      class="emotion-16"
    >
      <a
        class="emotion-1"
        href="https://github.com/narze/typeland"
        rel="noreferrer"
        target="_blank"
      >
        GitHub
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Home page renders title 1`] = `
<DocumentFragment>
  .emotion-15 {
  height: 100vh;
  min-width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-12 {
  max-width: 50%;
  min-width: 640px;
}

.emotion-2 {
  --text-opacity: 1;
  font-size: 2.25rem;
  color: #1c64f2;
  color: rgba(28,100,242,var(--text-opacity));
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-1 {
  font-size: 0.75rem;
}

.emotion-0 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-10 {
  font-size: 1.25rem;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-8 {
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  overflow-wrap: break-word;
}

.emotion-7 {
  position: relative;
  overflow-wrap: normal;
  word-break: normal;
}

.emotion-3 {
  --bg-opacity: 1;
  position: absolute;
  height: 1.5rem;
  background-color: #3f83f8;
  background-color: rgba(63,131,248,var(--bg-opacity));
  -webkit-transition: all 0.1s ease-out;
  transition: all 0.1s ease-out;
  width: 2px;
  margin-left: -1px;
  margin-right: -1px;
  left: 1px;
  top: 0px;
}

.emotion-11 {
  height: 0;
  width: 0;
}

.emotion-14 {
  position: fixed;
  bottom: 0;
  padding-bottom: 2rem;
  text-align: center;
}

.emotion-4 {
  --text-opacity: 1;
  color: #d2d6dc;
  color: rgba(210,214,220,var(--text-opacity));
}

<div
    class="emotion-15"
  >
    <main
      class="emotion-12"
    >
      <h1
        class="emotion-2"
      >
        Typeland
        <span
          class="emotion-1"
        >
           [Mode : 
          <button
            class="emotion-0"
          >
            typealong
          </button>
          ]
        </span>
      </h1>
      <div
        class="emotion-10"
        data-testid="text"
      >
        <span
          class="emotion-8"
          data-testid="user"
        >
          <span
            class="emotion-7"
          >
            <span
              class="emotion-3"
              data-testid="caret"
            />
            <span
              class="pending emotion-4"
              data-testid="pending"
            >
              t
            </span>
            <span
              class="pending emotion-4"
              data-testid="pending"
            >
              h
            </span>
            <span
              class="pending emotion-4"
              data-testid="pending"
            >
              e
            </span>
          </span>
          <span>
             
          </span>
        </span>
        <span
          class="emotion-8"
          data-testid="template"
        >
          quick brown fox jumps over the lazy dog
        </span>
      </div>
      <input
        class="emotion-11"
        data-testid="typingInput"
        id="typingInput"
        tabindex="0"
        type="text"
      />
    </main>
    <div
      class="emotion-14"
    >
      <a
        class="emotion-1"
        href="https://github.com/narze/typeland"
        rel="noreferrer"
        target="_blank"
      >
        GitHub
      </a>
    </div>
  </div>
</DocumentFragment>
`;
